--- a/sourse/pug/blocks/sCatalogBody/_sCatalogBody.pug
+++ b/sourse/pug/blocks/sCatalogBody/_sCatalogBody.pug
@@ -2,17 +2,17 @@ mixin sCatalogBody(data)
 	// start sCatalogBody
 	+b.sCatalogBody#sCatalogBody&attributes(attributes)
 		+e.row.row
-			.col-auto.col-md-6.col-lg-4.col-xxl-3
+			.col-12.col-md-6.col-lg-4.col-xxl-3
 				+productCard('1', '5004754', 'Комплект аккумуляторная цепная пила Husqvarna 120i 9670982-01 + Аккумулятор Husqvarna BLi200 9670919-01 + Зарядное устройство Husqvarna QC 330 9670914-01', '33 589 руб.', 'aval')
-			.col-auto.col-md-6.col-lg-4.col-xxl-3
+			.col-12.col-md-6.col-lg-4.col-xxl-3
 				+productCard('1', '5004754', 'Комплект аккумуляторная цепная пила Husqvarna 120i 9670982-01 + Аккумулятор Husqvarna BLi200 9670919-01 + Зарядное устройство Husqvarna QC 330 9670914-01', '33 589 руб.', 'aval')
-			.col-auto.col-md-6.col-lg-4.col-xxl-3
+			.col-12.col-md-6.col-lg-4.col-xxl-3
 				+productCard('1', '5004754', 'Комплект аккумуляторная цепная пила Husqvarna 120i 9670982-01 + Аккумулятор Husqvarna BLi200 9670919-01 + Зарядное устройство Husqvarna QC 330 9670914-01', '33 589 руб.', 'aval')
-			.col-auto.col-md-6.col-lg-4.col-xxl-3
+			.col-12.col-md-6.col-lg-4.col-xxl-3
 				+productCard('1', '5004754', 'Комплект аккумуляторная цепная пила Husqvarna 120i 9670982-01 + Аккумулятор Husqvarna BLi200 9670919-01 + Зарядное устройство Husqvarna QC 330 9670914-01', '33 589 руб.', 'aval')
-			.col-auto.col-md-6.col-lg-4.col-xxl-3
+			.col-12.col-md-6.col-lg-4.col-xxl-3
 				+productCard('1', '5004754', 'Комплект аккумуляторная цепная пила Husqvarna 120i 9670982-01 + Аккумулятор Husqvarna BLi200 9670919-01 + Зарядное устройство Husqvarna QC 330 9670914-01', '33 589 руб.', 'aval')
-			.col-auto.col-md-6.col-lg-4.col-xxl-3
+			.col-12.col-md-6.col-lg-4.col-xxl-3
 				+productCard('1', '5004754', 'Комплект аккумуляторная цепная пила Husqvarna 120i 9670982-01 + Аккумулятор Husqvarna BLi200 9670919-01 + Зарядное устройство Husqvarna QC 330 9670914-01', '33 589 руб.', 'aval')
 		+pugin()
 	// end sCatalogBody
