--- a/sourse/pug/blocks/sProductDesc/_sProductDesc.scss
+++ b/sourse/pug/blocks/sProductDesc/_sProductDesc.scss
@@ -6,7 +6,10 @@
 	padding-bottom: rem(10);
 	&__tabs {
 		display: flex;
-		gap: rem(10);
+		// gap: rem(10);
+		// @include media-breakpoint-down(lg) {
+		// 	display: block;
+		// }
 	}
 	&__tabs-btn {
 		@include mt;
@@ -14,6 +17,7 @@
 		color: $white;
 		font-weight: 700;
 		padding: rem(10);
+		max-width: fit-content;
 		.icon {
 			margin-right: rem(10);
 		}
@@ -22,6 +26,11 @@
 		}
 		&:hover {
 			background-color: $red;
+		}
+		@include media-breakpoint-down(lg) {
+			&:not(:last-child) {
+				margin-bottom: rem(10);
+			}
 		}
 	}
 	&__content {
@@ -99,6 +108,20 @@
 			&:hover {
 				background-color: $red;
 			}
+		}
+	}
+	.techsheet {
+		display: flex;
+    max-width: 452px;
+    justify-content: space-between;
+		font-size: rem(12);
+		padding: rem(10);
+		border-bottom: 1px dotted #bbb;
+		&__title {
+			font-weight: 700;
+		}
+		&__value {
+			font-weight: 500;
 		}
 	}
 	@include media-breakpoint-up(xl) {}
