edit category script

--- a/sourse/pug/blocks/sAllCategories/_sAllCategories.pug
+++ b/sourse/pug/blocks/sAllCategories/_sAllCategories.pug
@@ -8,7 +8,7 @@ mixin sAllCategories(data)
 		.container.sliderAutoWidthWrap
 			.row
 				.col-10
-					+b.sliderAutoWidth--js.swiper
+					+b.sliderCategotiesLinks--js.swiper
 						.swiper-wrapper
 							.swiper-slide
 								+allCategoriesItem('Снегоуборочные лопаты и движки для снега')
