--- a/sourse/pug/blocks/sAllCategories/_sAllCategories.pug
+++ b/sourse/pug/blocks/sAllCategories/_sAllCategories.pug
@@ -5,9 +5,9 @@ mixin allCategoriesItem(name)
 mixin sAllCategories(data)
 	// start sAllCategories
 	+b.SECTION.sAllCategories.section#sAllCategories&attributes(attributes)
-		.container.sliderAutoWidthWrap
+		+e.container.container.sliderAutoWidthWrap
 			.row
-				.col-10
+				+e.col-slider.col-12.col-sm-10
 					+b.sliderCategotiesLinks--js.swiper
 						.swiper-wrapper
 							.swiper-slide
@@ -26,42 +26,7 @@ mixin sAllCategories(data)
 								+allCategoriesItem('Маски и очки сварщика')
 							.swiper-slide
 								+allCategoriesItem('Сварочные аппараты')
-				//- +e.col--js.col-12
-				//- 	+e.fullList
-				//- 		+e.row-full-list.row
-				//- 			.col-12.col-sm-6.col-md-4.col-lg-3.col-xl-2
-				//- 				+allCategoriesItem('Снегоуборочные лопаты и движки для снега')
-				//- 			.col-12.col-sm-6.col-md-4.col-lg-3.col-xl-2
-				//- 				+allCategoriesItem('Сварочное оборудование')
-				//- 			.col-12.col-sm-6.col-md-4.col-lg-3.col-xl-2
-				//- 				+allCategoriesItem('Снегоуборочные лопаты и движки для снега')
-				//- 			.col-12.col-sm-6.col-md-4.col-lg-3.col-xl-2
-				//- 				+allCategoriesItem('Аппараты для плазменной резки')
-				//- 			.col-12.col-sm-6.col-md-4.col-lg-3.col-xl-2
-				//- 				+allCategoriesItem('Аппараты для контактной сварки')
-				//- 			.col-12.col-sm-6.col-md-4.col-lg-3.col-xl-2
-				//- 				+allCategoriesItem('Сварочное оборудование')
-				//- 			.col-12.col-sm-6.col-md-4.col-lg-3.col-xl-2
-				//- 				+allCategoriesItem('Снегоуборочные лопаты и движки для снега')
-				//- 			.col-12.col-sm-6.col-md-4.col-lg-3.col-xl-2
-				//- 				+allCategoriesItem('Аппараты для плазменной резки')
-				//- 			.col-12.col-sm-6.col-md-4.col-lg-3.col-xl-2
-				//- 				+allCategoriesItem('Аппараты для контактной сварки')
-				//- 			.col-12.col-sm-6.col-md-4.col-lg-3.col-xl-2
-				//- 				+allCategoriesItem('Сварочное оборудование')
-				//- 			.col-12.col-sm-6.col-md-4.col-lg-3.col-xl-2
-				//- 				+allCategoriesItem('Аппараты для контактной сварки')
-				//- 			.col-12.col-sm-6.col-md-4.col-lg-3.col-xl-2
-				//- 				+allCategoriesItem('Снегоуборочные лопаты и движки для снега')
-				//- 			.col-12.col-sm-6.col-md-4.col-lg-3.col-xl-2
-				//- 				+allCategoriesItem('Аппараты для плазменной резки')
-				//- 			.col-12.col-sm-6.col-md-4.col-lg-3.col-xl-2
-				//- 				+allCategoriesItem('Сварочное оборудование')
-				//- 			.col-12.col-sm-6.col-md-4.col-lg-3.col-xl-2
-				//- 				+allCategoriesItem('Аппараты для контактной сварки')
-				//- 			.col-12.col-sm-6.col-md-4.col-lg-3.col-xl-2
-				//- 				+allCategoriesItem('Аппараты для плазменной резки')
-				.col
+				+e.col-btn.col
 					+e.toggle.BUTTON(data-open="Все категории" data-close="Скрыть")  Все категории
 						//- +e.P.text Все категории
 	// end sAllCategories
