--- a/sourse/pug/blocks/sAllCategories/_sAllCategories.scss
+++ b/sourse/pug/blocks/sAllCategories/_sAllCategories.scss
@@ -1,30 +1,37 @@
 // start .sAllCategories
 
-.sliderAutoWidthWrap.active{
-	.swiper-wrapper{
-		transform: none !important;
-		flex-wrap: wrap;
-		width: calc(100% + #{$grid-gutter-width}) ;
-		margin-right: - $grid-gutter-width;;
-	}
-	.categories-item{
-		width: 100%;
-	}
-	.swiper-slide{
-		width: calc(25% - #{$grid-gutter-width});
-	}
-	.col-10{
-		width: 100%;	
-	}
-	.col{
-		width: 100%;
-	}
-}
-
 .sAllCategories {
 		// --sPT: ;
 		// --sPB: ;
 		// --sTPB: ;
+		&__container {
+			&.active {
+				.swiper-wrapper{
+					transform: none !important;
+					flex-wrap: wrap;
+					width: calc(100% + #{$grid-gutter-width}) ;
+					margin-right: - $grid-gutter-width;;
+				}
+				.categories-item{
+					width: 100%;
+				}
+				.swiper-slide {
+					width: 100%;
+					@include media-breakpoint-up(sm) {
+						width: calc(50% - #{$grid-gutter-width});
+					}
+					@include media-breakpoint-up(md) {
+						width: calc(25% - #{$grid-gutter-width});
+					}
+				}
+				.sAllCategories__col-slider {
+					width: 100%;
+				}
+				.sAllCategories__col-btn {
+					width: 100%;
+				}
+			}
+		}
 	.swiper-slide {
 		width: auto;
 		margin-right: $grid-gutter-width;
