--- a/sourse/pug/pages/02-catalog-item.pug
+++ b/sourse/pug/pages/02-catalog-item.pug
@@ -10,6 +10,7 @@ include ../blocks/sHit/_sHit.pug
 include ../blocks/sCatalogHead/_sCatalogHead.pug
 include ../blocks/sProductDesc/_sProductDesc.pug
 include ../blocks/sBlogSlider/_sBlogSlider.pug
+include ../blocks/sProductItem/_sProductItem.pug
  
 include ../blocks/sContact/_sContact.pug
 include ../blocks/sForm/_sForm.pug
@@ -30,6 +31,7 @@ block pagecontent
 	+topLine
 	+top-nav()
 	+page-head(title, 'Главная', 'Садовая техника', 'Расходные материалы к садовой технике', 'Триммерный корд Husqvarna Opti Round 1%2C5 мм/15 м в блистере 5976688-01')
+	+sProductItem
 	+sProductDesc2
 	+sBlogSlider('Ранее просмотренные товары')
 	+footer()
