--- a/sourse/pug/blocks/sOrder/_sOrder.scss
+++ b/sourse/pug/blocks/sOrder/_sOrder.scss
@@ -93,7 +93,7 @@ body .bx-sls .bx-ui-sls-container {
 	display: flex;
 	padding: 1rem;
 	margin-right: 1rem;
-	align-items: start;
+	align-items: flex-start;
 	cursor: pointer;
 	flex-basis: 100%;
 	flex-wrap: wrap;
