--- a/sourse/pug/blocks/top-nav/_top-nav.scss
+++ b/sourse/pug/blocks/top-nav/_top-nav.scss
@@ -3,15 +3,19 @@
 	// 
 	background-color: $body-color;
 	color: $white;
+	z-index: 301;
+	.container{
+		position: relative;
+	}
 
 	.menu-item {
 		font-weight: 700;
 		
 	}
 
-	&__catalog {
-		display: flex;
-		align-items: center;
+	&__col-catalog {
+		// display: flex;
+		// align-items: center;
 		max-width:rem(312);
 	}
 	
