--- a/sourse/pug/blocks/sCatalogNav/_sCatalogNav.scss
+++ b/sourse/pug/blocks/sCatalogNav/_sCatalogNav.scss
@@ -119,3 +119,18 @@
 	opacity: 0;
   visibility: hidden;
 }
+
+
+
+// .topLine-menu{
+// 	position: fixed;
+// 	left: 0;
+// 	bottom: 0;
+// 	width: 100%;
+// 	padding: 30px;
+// 	z-index: 1200;
+// 	background-color: #fff;
+// 	.row{
+// 		justify-content: space-between;
+// 	}
+// }
