--- a/sourse/pug/blocks/topLine/_topLine.pug
+++ b/sourse/pug/blocks/topLine/_topLine.pug
@@ -3,11 +3,11 @@ mixin topLine()
 	+b.topLine.section#topLine&attributes(attributes)
 		.container
 			.row
-				.col-auto
+				.col-md-auto
 					+e.logo
 						a(href="/")
 							img(src="img/svg/logo.svg", alt="")
-				.col
+				.col.search-col
 					+e.search.FORM
 						input(type="text" name="Имя" placeholder="Что будем искать?")
 						button
@@ -22,20 +22,27 @@ mixin topLine()
 									p <span>Москва</span>Выбрать другой город							
 						.col-auto
 							+e.to-call
-								+icon('phone')
-								.topLine__to-call-text
-									p <span> +7 861 206 10 07</span> с 09:00 до 20:00							
-								a(href='tel:+74951208090').stretched-link 
-						.col-auto
-							+icon('login')
-							a(href="#").stretched-link Кабинет
-						.col-auto.counting
-							+icon('compare')
-							a(href="#").stretched-link Сравнения
-						.col-auto.counting
-							+icon('bookmarks')
-							a(href="#").stretched-link Закладки
-						.col-auto.counting
-							+icon('cart')
-							a(href="#").stretched-link Корзина
+								a(href='tel:+74951208090')
+									+icon('phone')
+									.topLine__to-call-text
+										p <span> +7 861 206 10 07</span> с 09:00 до 20:00							
+						.col-auto.topLine-menu__item
+							a(href="#") 
+								+icon('login')
+								span Кабинет
+						.col-auto.topLine-menu__item
+							a(href="#")
+								+icon('compare')
+								span Сравнения
+								.counting 0
+						.col-auto.topLine-menu__item
+							a(href="#")
+								+icon('bookmarks')
+								span Закладки
+								.counting 00
+						.col-auto.topLine-menu__item
+							a(href="#") 
+								+icon('cart')
+								span Корзина
+								.counting 0
 	// end topLine
