--- a/sourse/pug/blocks/topLine/_topLine.scss
+++ b/sourse/pug/blocks/topLine/_topLine.scss
@@ -14,21 +14,50 @@
 		}
 
 		&__logo {
+			@include media-breakpoint-down(md) {
+				margin-top: 81px;
+				width: 100%;
+				a {
+					display: block;
+				}
+			}
 			img {
 				margin: 0 15px;
 				width: 205px;
 				height: 24px;
+				@include media-breakpoint-down(md) {
+					display: block;
+					margin-left: auto;
+					margin-right: auto ;
+				}
 			}
 		}
-
+		.search-col {
+			background-color:$white;
+			@include media-breakpoint-down(md) {
+				position: fixed;
+				top: 0;
+				left: 0;
+				width: 100%;
+				background-color:$white;
+				border: 1px solid #ddd;
+				padding: rem(14);
+				box-shadow: 0 5px 1rem rgb(68 68 68 / 20%);
+				z-index: 500;
+			}
+		}
 		&__search {
 			display: flex;
 			justify-content: space-between;
   		padding: 7px;
 			width: 100%;
-			margin-bottom: 0;
-			margin-right: $grid-gutter-width;
-			border: 1px solid $gray;
+			margin-bottom: 0;	
+			border: 1px solid #ddd;
+			@include media-breakpoint-down(md) {
+				background-color:$white;
+				padding: rem(14);
+				z-index: 500;
+			}
 			&__input-wrap {
 				width: 100%;
 			}
@@ -58,9 +87,12 @@
 			position: relative;
 			display: flex;
 			align-items: center;
-			margin-right: $grid-gutter-width;
+			// margin-right: $grid-gutter-width;
 			&-text {
 				text-align: center;
+				@include media-breakpoint-down(lg) {
+					display: none;
+				}
 			}
 			p {
 				margin-bottom: 0;
@@ -81,8 +113,12 @@
 			border: none;
 			background: transparent;
 			transition: color .3s ease-in-out;
-			@include media-breakpoint-down(xl) {
-				margin-right: calc($grid-gutter-width * 3);
+			width: 140px;
+			@include media-breakpoint-up(xl) {
+				width: auto;
+			}
+			@include media-breakpoint-down(lg) {
+				width: auto;
 			}
 
 			&:hover {
@@ -94,55 +130,77 @@
 		}
 
 		&__to-call {
-			@include media-breakpoint-down(xl) {
-				margin-right: calc($grid-gutter-width * 3);
-			}
+			// @include media-breakpoint-down(xl) {
+			// 	margin-right: calc($grid-gutter-width * 3);
+			// }
 			.icon {
 				color: $green;
 			}
 		}
-
-
+		
+		
 		&-menu {
-			ul {
-				display: flex;
-				list-style-type: none;
-				margin-bottom: 0;
+			& > .row {
+				@include media-breakpoint-down(md) {
+					position: fixed;
+					padding: rem(14);
+					display: flex;
+					justify-content: space-between;
+					bottom: 0;
+					left: 0;
+					right: 0;
+					width:100%;
+					margin: 0 auto;
+					background-color: $white;
+					box-shadow: 0 -5px 1rem rgb(68 68 68 / 20%);
+					z-index: 500;
+				}
 			}
-			li {
+			&__item {	
+				position: relative;
+				margin-right: rem(10);
+				@include media-breakpoint-up(xl) {
+					margin-right: 0;
+				}
+				span {
+					display: none;
+					@include media-breakpoint-up(xl) {
+						display: block;
+					}
+				}
+			}
+			.icon {
+				font-size: rem(24);
+			}
+			a {
 				display: flex;
 				flex-direction: column;
 				align-items: center;
 				position: relative;
-				margin-right: $grid-gutter-width;
-				&:not(:last-child) {
-					@include media-breakpoint-down(xl) {
-						margin-right: calc($grid-gutter-width*2);
-					}
-				}		
-				.icon {
-					font-size: rem(24);
-				}
-				a {
-					color: $body-color;
-					&:hover {
+				color: $body-color;
+				&:hover {
+					span {
 						color: $green;
 					}
 				}
 			}
-			.counting::after {
-				content: '0';
-				position: absolute;
+		}
+		.counting {
+			position: absolute;
+			bottom: 6px;
+			right: rem(-10);
+			width: 20px;
+			height: 20px;
+			border: 1px solid $green;
+			border-radius: 100%;
+			background-color: $white;
+			text-align: center;
+			font-size: 12px;
+			line-height: 20px;
+			z-index: 5;
+			@include media-breakpoint-up(xl) {
 				bottom: 15px;
 				right: 6px;
-				width: 20px;
-				height: 20px;
-				border: 1px solid $green;
-				border-radius: 100%;
-				background-color: $white;
-				text-align: center;
-				font-size: 12px;
-				line-height: 20px;
 			}
 		}
 		 
