--- a/sourse/pug/blocks/sBlogNav/_sBlogNav.pug
+++ b/sourse/pug/blocks/sBlogNav/_sBlogNav.pug
@@ -6,28 +6,28 @@ mixin sBlogNav(data)
 			<nav class="blog-nav" title="Содеражние статьи">
 				ul.blog-nav__list.nav
 					li.blog-nav__item
-						a(href="#").blog-nav__link Приготовление бензиново-масляной смеси
+						a(href="#blog-nav-1").blog-nav__link Приготовление бензиново-масляной смеси
 					li.blog-nav__item
-						a(href="#").blog-nav__link Обкатка двигателя&nbsp;&mdash; почему это важно?
+						a(href="#blog-nav-2").blog-nav__link Обкатка двигателя&nbsp;&mdash; почему это важно?
 					li.blog-nav__item
-						a(href="#").blog-nav__link Выбор масла для редуктора
+						a(href="#blog-nav-3").blog-nav__link Выбор масла для редуктора
 					li.blog-nav__item
-						a(href="#").blog-nav__link Обслуживание триммера в&nbsp;домашних условиях
+						a(href="#blog-nav-4").blog-nav__link Обслуживание триммера в&nbsp;домашних условиях
 						ul
 							li
-								a(href="#dvig") Двигатель
+								a(href="#blog-nav-5") Двигатель
 							li
-								a(href="#") Режущий механизм
+								a(href="#blog-nav-6") Режущий механизм
 							li
-								a(href="#") Шпуля с&nbsp;леской
+								a(href="#blog-nav-7") Шпуля с&nbsp;леской
 							li
-								a(href="#") Редуктор
+								a(href="#blog-nav-8") Редуктор
 							li
-								a(href="#") Защитный кожух
+								a(href="#blog-nav-9") Защитный кожух
 					li.blog-nav__item
-						a(href="#").blog-nav__link Триммер не&nbsp;заводится&nbsp;&mdash; что делать?
+						a(href="#blog-nav-10").blog-nav__link Триммер не&nbsp;заводится&nbsp;&mdash; что делать?
 					li.blog-nav__item
-						a(href="#").blog-nav__link Типичные поломки и&nbsp;способы их&nbsp;устранения
+						a(href="#blog-nav-11").blog-nav__link Типичные поломки и&nbsp;способы их&nbsp;устранения
 					li.blog-nav__item
-						a(href="#").blog-nav__link Как продлить срок службы триммера?
+						a(href="#blog-nav-12").blog-nav__link Как продлить срок службы триммера?
 	// end sBlogNav
