--- a/sourse/pug/blocks/sArticle/_sArticle.pug
+++ b/sourse/pug/blocks/sArticle/_sArticle.pug
@@ -3,13 +3,13 @@ mixin sArticle(data)
 	+b.SECTION.sArticle.section#sArticle&attributes(attributes)
 		p Красивый ухоженный газон, аккуратно подстриженная лужайка&nbsp;&mdash; это результат использования триммера для травы. При помощи этого инструмента можно быстро привести участок в&nbsp;порядок. В&nbsp;отличие от&nbsp;газонокосилки небольшой и&nbsp;маневренный инструмент легко проникает в&nbsp;труднодоступные места (вокруг деревьев, возле забора, скамеек). Как и&nbsp;любая другая техника, триммер нуждается в&nbsp;грамотном уходе и&nbsp;обслуживании.
 		p Срок службы и&nbsp;работоспособность бензокосы зависит от&nbsp;того, соблюдает&nbsp;ли пользователь правила эксплуатации. Вся информация, которая может потребоваться владельцу, размещена в&nbsp;руководстве. Обязательно изучите этот документ перед тем, как приступать к&nbsp;работе с&nbsp;триммером. А&nbsp;в&nbsp;этой статье остановимся на&nbsp;рассмотрении главных вопросов, касающихся использования инструмента.
-		h2 Приготовление бензиново-масляной смеси
+		h2(id="blog-nav-1") Приготовление бензиново-масляной смеси
 		p Большинство триммеров оснащается двухтактными двигателями, которые работают на&nbsp;масляно-топливной смеси. Для её&nbsp;приготовления следует использовать бензин с&nbsp;подходящим октановым числом и&nbsp;масло 2Т. Необходимо соблюдать пропорции, указанные в&nbsp;руководстве.
 		ul
 			li 1:25&nbsp;&mdash; на&nbsp;1&nbsp;л топлива 40&nbsp;мл масла;
 			li 1:50&nbsp;&mdash; на&nbsp;1&nbsp;л топлива 20&nbsp;мл масла.
 		p Смесь должна быть свежей, поэтому не&nbsp;стоит готовить с&nbsp;запасом и&nbsp;долго хранить&nbsp;её. Ни&nbsp;в&nbsp;коем случае не&nbsp;используйте автомобильное масло, так как оно содержит присадки, которые могут привести к&nbsp;поломке мотора триммера. Лучше всего покупать фирменные масла известных производителей. Что касается топлива, то&nbsp;подходят марки АИ-92 и&nbsp;АИ-95.
-		h2 Обкатка двигателя&nbsp;&mdash; почему это важно?
+		h2(id="blog-nav-2") Обкатка двигателя&nbsp;&mdash; почему это важно?
 		+img('img/article-1.jpg')
 		p После покупки триммера нужно провести его обкатку. Это способствует увеличению рабочего ресурса двигателя, обеспечивает силовому агрегату защиту от поломок и преждевременного выхода из строя. На начальном этапе эксплуатации бензокосы придерживайтесь таких рекомендаций:
 		ul
@@ -19,32 +19,32 @@ mixin sArticle(data)
 			li периодически чистите топливный фильтр и ребра цилиндра щеткой или сжатым воздухом;
 			li каждые 10 рабочих часов проводите чистку воздушного фильтра.
 		p Крутящий момент двигателя должен повышаться плавно. После запуска мотора дайте инструменту поработать на холостом ходу в течение нескольких минут.
-		h2 Выбор масла для редуктора
+		h2(id="blog-nav-3") Выбор масла для редуктора
 		p Применение качественных смазочных материалов&nbsp;&mdash; важное условие для нормальной работы триммера. Одним из&nbsp;главных механизмов инструмента является редуктор. Он&nbsp;подвергается высоким нагрузкам, что приводит к&nbsp;усиленному износу. Чтобы увеличить рабочий ресурс редуктора, используйте масло, которое соответствует таким требованиям:
 		ul
 			li вязкость&nbsp;&mdash; консистенция не&nbsp;меняется под воздействием повышенных температур;
 			li адгезия к&nbsp;металлическим поверхностям&nbsp;&mdash; смазка обволакивает рабочие узлы, уменьшая трение между ними;
 			li подходящий состав&nbsp;&mdash; в&nbsp;продукте оптимальное содержание присадок.
 		p При выборе смазки важно обращать внимание также на&nbsp;бренд. Самые лучшие продукты этого типа выпускаются под такими торговыми марками как Husqvarna, Huter, Stihl.
-		h2 Обслуживание триммера в&nbsp;домашних условиях
+		h2(id="blog-nav-4") Обслуживание триммера в&nbsp;домашних условиях
 		p Триммеры требуют правильного ухода, особенно те&nbsp;модели, которые работают на&nbsp;бензине. Сложные мероприятия проводятся в&nbsp;сервисном центре, а&nbsp;вот простые операции можно выполнить самостоятельно в&nbsp;гараже. Каждый владелец должен знать, как чистить электрический триммер или мотокосу, как менять фильтрующие элементы, наматывать леску на&nbsp;шпулю и&nbsp;пр.
-		h2(id='dvig') Двигатель
+		h2(id='blog-nav-5') Двигатель
 		p Двигатель отвечает за&nbsp;обеспечение работоспособности триммеру. Техника популярных брендов комплектуется надежными моторами, которые имеют повышенный рабочий ресурс. Наиболее распространенные проблемы, которые могут возникнуть с&nbsp;силовым агрегатом:
 		ul
 			li поломка карбюратора;
 			li заклинивание;
 			li снижение компрессии.
 		p Чтобы избежать подобных неприятностей и&nbsp;поддерживать мотор в&nbsp;рабочем состоянии, следите за&nbsp;чистотой воздушного фильтра. Время от&nbsp;времени нужно также удалять грязь с&nbsp;глушителя, чистить его от&nbsp;нагара и&nbsp;менять смечу зажигания.
-		h2 Режущий механизм
+		h2(id='blog-nav-6') Режущий механизм
 		p За&nbsp;срезание растительности отвечают ножи и&nbsp;леска. Триммеры, которые комплектуются режущими дисками, способны не&nbsp;только проводить стрижку газонной травы, но&nbsp;и&nbsp;срезать растения с&nbsp;толстыми стеблями (до&nbsp;7-10&nbsp;см в&nbsp;диаметре), расчищать заросли. Для заточки деталей используйте напильник. Тупые ножи плохо справляются со&nbsp;своей работой. Это не&nbsp;только сказывается на&nbsp;качестве стрижки, но&nbsp;и&nbsp;оказывает повышенную нагрузку на&nbsp;двигатель.
-		h2 Шпуля с&nbsp;леской
+		h2(id='blog-nav-7') Шпуля с&nbsp;леской
 		p Ни&nbsp;в&nbsp;коем случае нельзя использовать для стрижки травы металлический трос и&nbsp;проволоку. Для этой работы необходима специальная леска, изготовленная из&nbsp;нейлоновой нити. Купить её&nbsp;можно в&nbsp;специализированном магазине. В&nbsp;инструкции есть указание, леску какого диаметра следует покупать. Слишком толстая нить перегружает двигатель. Для маломощных моделей оптимальный вариант&nbsp;&mdash; 1,5&nbsp;мм, для производительных до&nbsp;3,2&nbsp;мм.
 		p Леску нужно наматывать на&nbsp;шпулю руками довольно плотно, но&nbsp;без пресечения витков. Триммерная головка может подавать корд в&nbsp;автоматическом или полуавтоматическом режиме. Следите за&nbsp;целостностью этого элемента, ведь его деформация отрицательно влияет на&nbsp;работу всего инструмента.
-		h2 Редуктор
+		h2(id='blog-nav-8') Редуктор
 		p Принцип работы триммера: двигатель вращается, передает энергию через редуктор на&nbsp;режущий механизм. Полезно быть ознакомленным с&nbsp;тем, как обслуживать соединительное звено. Достаточно просто его очищать от&nbsp;грязи, при необходимости вносить консистентную смазку.
-		h2 Защитный кожух
+		h2(id='blog-nav-9') Защитный кожух
 		p Защитный кожух не&nbsp;только предупреждает возникновение поломок вследствие воздействия внешних факторов, но&nbsp;и&nbsp;повышает безопасность эксплуатации триммера. Не&nbsp;забывайте установить этот элемент перед началом кошения.
-		h2 Триммер не&nbsp;заводится&nbsp;&mdash; что делать?
+		h2(id='blog-nav-10') Триммер не&nbsp;заводится&nbsp;&mdash; что делать?
 		+img('img/article-2.jpg')
 		p Иногда процесс кошения приходится отменить из-за того, что триммер не&nbsp;запускается. Чтобы восстановить работоспособность инструмента, сначала нужно найти причину поломки. В&nbsp;электрических косах это может быть проблема с&nbsp;кабелем или заклинивание реле вследствие перепада напряжения в&nbsp;сети. Поможет замена элементов, которые вышли из&nbsp;строя.
 		p Причины, почему не&nbsp;заводится бензиновый триммер:
@@ -56,7 +56,7 @@ mixin sArticle(data)
 			li деформация гибкого вала (находится внутри штанги)&nbsp;&mdash; нужно разобрать устройство, заменить поврежденный механизм, затем собрать обратно;
 			li скопление грязи в&nbsp;глушителе&nbsp;&mdash; накипь на&nbsp;внутренней поверхности детали может привести к&nbsp;поломке двигателя, поможет тщательная чистка или замена.
 		p Здесь перечислены основные, но&nbsp;не&nbsp;все причины, по&nbsp;каким триммер может не&nbsp;завестись. Если самостоятельно не&nbsp;удалось ничего сделать, обратитесь в&nbsp;сервис, где проводят профессиональное обслуживание и&nbsp;ремонт садовой техники.
-		h2 Типичные поломки и&nbsp;способы их&nbsp;устранения
+		h2(id='blog-nav-11') Типичные поломки и&nbsp;способы их&nbsp;устранения
 		p Практически любой владелец может провести мелкий ремонт своего триммера. Перечень допустимых работ зависит от&nbsp;вида и&nbsp;модели инструмента. С&nbsp;электрическими агрегатами сложнее: в&nbsp;них получится заменить щетки и&nbsp;проверить контакты. Конечно, если в&nbsp;бензиновом триммере сломался двигатель, самостоятельно делать ничего не&nbsp;стоит. А&nbsp;вот некоторые поломки другого типа можете попытаться устранить.
 		ul
 			li Запавший тумблер. Понадобится паяльник и&nbsp;кое-какие знания из&nbsp;сферы электротехники.
@@ -65,7 +65,7 @@ mixin sArticle(data)
 			li Сломалась штанга. Эта часть инструмента легко прикручивается к&nbsp;рейкам или скобам.
 			li Поломка пластикового ножа. Вообще его выбросите. Купите металлические, они более прочные и&nbsp;надежные, служат гораздо дольше.
 		p Однако если у&nbsp;вас нет никаких навыков для ремонта триммера, не&nbsp;рискуйте, сразу несите сломанный инструмент в&nbsp;мастерскую. Производитель очень не&nbsp;рекомендует вмешиваться в&nbsp;конструкцию агрегата. Непрофессиональные действия могут привести к&nbsp;возникновению еще большей проблемы.
-		h2 Как продлить срок службы триммера?
+		h2(id='blog-nav-12') Как продлить срок службы триммера?
 		+img('img/article-3.jpg')
 		p Сначала выбираем хороший инструмент. Доверяйте продукции известных брендов, учитывайте комментарии и&nbsp;советы специалистов. Такие компании как Husqvarna, Huter, Stihl выпускают надежную технику для сада, дачи, приусадебного участка (бензопилы, газонокосилки, кусторезы и&nbsp;др.). Широкий ассортимент представлен на&nbsp;сайте интернет-магазина &laquo;Техносадов&raquo;. В&nbsp;телефонном режиме вы&nbsp;можете получить ответы на&nbsp;все вопросы, касающиеся выбора и&nbsp;заказа техники.
 		p Триммер для травы будет работать долго, если пользователь соблюдает правила эксплуатации. Рассмотрим главные рекомендации.
