--- a/sourse/pug/blocks/sBlogNav/_sBlogNav.scss
+++ b/sourse/pug/blocks/sBlogNav/_sBlogNav.scss
@@ -43,3 +43,7 @@
 	@include media-breakpoint-only(xl) {}
 	@include media-breakpoint-down(xl) {}
 } // end.sBlogNav
+
+.scrolled {
+	color: #ff3300 !important;
+}
