--- a/sourse/pug/blocks/sBlogNav/_sBlogNav.pug
+++ b/sourse/pug/blocks/sBlogNav/_sBlogNav.pug
@@ -1,7 +1,7 @@
 mixin sBlogNav(data)
 	// start sBlogNav
 	+b.SECTION.sBlogNav.section#sBlogNav&attributes(attributes)
-		+e.sticky-wrap--js
+		+e.sticky-wrap--js.custom-scroll
 			+e.title Содержание
 			<nav class="blog-nav" title="Содеражние статьи">
 				ul.blog-nav__list.nav
