--- a/sourse/pug/blocks/headerBlock/_headerBlock.scss
+++ b/sourse/pug/blocks/headerBlock/_headerBlock.scss
@@ -16,14 +16,14 @@
 	}
 	.hero-slider {
 		position: relative;
-		margin-right: $grid-gutter-width;
+		height: 100%;
 		@include media-breakpoint-down(md) {
-			margin-right: 0;;
+			margin-right: 0;
 		}
 		img {
 			max-width: 100%;
 			max-height: 100%;
-			height: auto;
+			height: 100%;
 			width: auto !important;
 			vertical-align: top;
 		}
@@ -67,6 +67,12 @@
 			.hero-slider-button-next {
 				right: 0;
 			}
+		}
+	}
+
+	.header-right {
+		img {
+			max-height: 100%;
 		}
 	}
 
