--- a/sourse/pug/blocks/sBlogNav/_sBlogNav.scss
+++ b/sourse/pug/blocks/sBlogNav/_sBlogNav.scss
@@ -11,6 +11,9 @@
 	@include media-breakpoint-up(lg) {
 		max-width: 330px;
 	}
+	&__sticky-wrap {
+		overflow-y: scroll;
+	}
 	&__title {
 		border-bottom: 1px solid #ddd;
     padding-bottom: $grid-gutter-width;;
