--- a/sourse/sass/_sprite.scss
+++ b/sourse/sass/_sprite.scss
@@ -23,6 +23,14 @@
 	font-size:math.div(31,10)*1rem;
 	width: math.div(23,31)*1em;
 }
+.icon-car {
+	font-size:math.div(30,10)*1rem;
+	width: math.div(45,30)*1em;
+}
+.icon-cards {
+	font-size:math.div(30,10)*1rem;
+	width: math.div(34,30)*1em;
+}
 .icon-cart {
 	font-size:math.div(31,10)*1rem;
 	width: math.div(31,31)*1em;
@@ -95,6 +103,10 @@
 	font-size:math.div(30,10)*1rem;
 	width: math.div(31,30)*1em;
 }
+.icon-plane {
+	font-size:math.div(30,10)*1rem;
+	width: math.div(31,30)*1em;
+}
 .icon-search {
 	font-size:math.div(20,10)*1rem;
 	width: math.div(19,20)*1em;
@@ -106,6 +118,10 @@
 .icon-star {
 	font-size:math.div(16,10)*1rem;
 	width: math.div(15,16)*1em;
+}
+.icon-store {
+	font-size:math.div(30,10)*1rem;
+	width: math.div(31,30)*1em;
 }
 .icon-telegram {
 	font-size:math.div(16,10)*1rem;
